--- a/single-activites.html
+++ b/single-activites.html
@@ -53,7 +53,7 @@
     <header>
       <div class="container">
         <div class="header">
-          <a href="" class="header-logo">
+          <a href="./index.html" class="header-logo">
             <img src="./assets/img/logo.png" alt="" />
           </a>
           <div class="header-right">
@@ -96,17 +96,17 @@
         >
           <ul class="navbar-nav my-menu-list mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a class="nav-link active" aria-current="page" href="./index.html"
                 >Əsas səhifə</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Haqqımızda</a>
+              <a class="nav-link" href="./about-us.html">Haqqımızda</a>
             </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
-                href="#"
+                href="./activites.html"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
@@ -115,27 +115,27 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="#"
+                  <a class="dropdown-item" href="./single-activites.html"
                     >Monitorinq və qiymətləndirmə</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#"
+                  <a class="dropdown-item" href="./single-activites.html"
                     >Təlim və metodologiya üzrə dəstək</a
                   >
                 </li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Xəbərlər</a>
+              <a class="nav-link" href="./news.html">Xəbərlər</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Tərəfdaşlar</a>
+              <a class="nav-link" href="./partners.html">Tərəfdaşlar</a>
             </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
-                href="#"
+                href="./reports.html"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
@@ -144,19 +144,19 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="#">Monitorinq hesabatları</a>
+                  <a class="dropdown-item" href="./single-report.html">Monitorinq hesabatları</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">İllik hesabatlar</a>
+                  <a class="dropdown-item" href="./single-report.html">İllik hesabatlar</a>
                 </li>
-                <li><a class="dropdown-item" href="#">Təhlillər</a></li>
+                <li><a class="dropdown-item" href="./single-report.html">Təhlillər</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sənədlər</a>
+              <a class="nav-link" href="./documents.html">Sənədlər</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Əlaqə</a>
+              <a class="nav-link" href="./contact.html">Əlaqə</a>
             </li>
             <li>
               <a class="nav-link" id="search"
@@ -193,7 +193,7 @@
         </div>
       </div>
     </nav>
-
+    <!-- End Nav -->
     <!-- Main -->
     <main>
       <div
