--- a/single-report.html
+++ b/single-report.html
@@ -49,150 +49,151 @@
     </div>
     <!-- End Preloader Area -->
 
-    <!-- Header -->
-    <header>
-      <div class="container">
-        <div class="header">
-          <a href="" class="header-logo">
-            <img src="./assets/img/logo.png" alt="" />
-          </a>
-          <div class="header-right">
-            <div class="header-info">
-              <div class="header-info-item">
-                <img src="./assets/img/phone.svg" alt="" />
-                <a href="" class="header-info-item-text">+91-234-567-8900</a>
+      <!-- Header -->
+      <header>
+        <div class="container">
+          <div class="header">
+            <a href="./index.html" class="header-logo">
+              <img src="./assets/img/logo.png" alt="" />
+            </a>
+            <div class="header-right">
+              <div class="header-info">
+                <div class="header-info-item">
+                  <img src="./assets/img/phone.svg" alt="" />
+                  <a href="" class="header-info-item-text">+91-234-567-8900</a>
+                </div>
+                <div class="header-info-item">
+                  <img src="./assets/img/email.svg" alt="" />
+                  <a href="" class="header-info-item-text">info@ptim.com</a>
+                </div>
               </div>
-              <div class="header-info-item">
-                <img src="./assets/img/email.svg" alt="" />
-                <a href="" class="header-info-item-text">info@ptim.com</a>
+              <div class="header-language">
+                <a href="" class="header-language-item active">AZE</a>
+                <a href="" class="header-language-item">ENG</a>
+                <a href="" class="header-language-item">RUS</a>
               </div>
-            </div>
-            <div class="header-language">
-              <a href="" class="header-language-item active">AZE</a>
-              <a href="" class="header-language-item">ENG</a>
-              <a href="" class="header-language-item">RUS</a>
             </div>
           </div>
         </div>
-      </div>
-    </header>
-    <!-- Nav -->
-    <nav class="navbar navbar-expand-lg my-menu">
-      <div class="container">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="collapse navbar-collapse justify-content-between"
-          id="navbarSupportedContent"
-        >
-          <ul class="navbar-nav my-menu-list mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
-                >Əsas səhifə</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Haqqımızda</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Fəaliyyətlər
-              </a>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="#"
-                    >Monitorinq və qiymətləndirmə</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#"
-                    >Təlim və metodologiya üzrə dəstək</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Xəbərlər</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Tərəfdaşlar</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Hesabatlar
-              </a>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="#">Monitorinq hesabatları</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">İllik hesabatlar</a>
-                </li>
-                <li><a class="dropdown-item" href="#">Təhlillər</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Sənədlər</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Əlaqə</a>
-            </li>
-            <li>
-              <a class="nav-link" id="search"
-                ><img src="./assets/img/search.svg" alt=""
-              /></a>
-              <a class="nav-link" id="close"
-                ><img src="./assets/img/close.png" alt=""
-              /></a>
-            </li>
-            <div class="search-form">
-              <form action="">
-                <input
-                  type="text"
-                  type="search"
-                  name=""
-                  placeholder="Axtar..."
-                />
-              </form>
-            </div>
-          </ul>
-
-          <a href="#" class="sorgu-btn">
-            <span>Sorğu</span>
-            <img src="./assets/img/redirect.svg" alt="" />
-          </a>
-          <form class="mobile-search" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Axtar..."
-              aria-label="Search"
-            />
-          </form>
+      </header>
+      <!-- Nav -->
+      <nav class="navbar navbar-expand-lg my-menu">
+        <div class="container">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-between"
+            id="navbarSupportedContent"
+          >
+            <ul class="navbar-nav my-menu-list mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./index.html"
+                  >Əsas səhifə</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./about-us.html">Haqqımızda</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="./activites.html"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Fəaliyyətlər
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="./single-activites.html"
+                      >Monitorinq və qiymətləndirmə</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./single-activites.html"
+                      >Təlim və metodologiya üzrə dəstək</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./news.html">Xəbərlər</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./partners.html">Tərəfdaşlar</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="./reports.html"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Hesabatlar
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="./single-report.html">Monitorinq hesabatları</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./single-report.html">İllik hesabatlar</a>
+                  </li>
+                  <li><a class="dropdown-item" href="./single-report.html">Təhlillər</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./documents.html">Sənədlər</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contact.html">Əlaqə</a>
+              </li>
+              <li>
+                <a class="nav-link" id="search"
+                  ><img src="./assets/img/search.svg" alt=""
+                /></a>
+                <a class="nav-link" id="close"
+                  ><img src="./assets/img/close.png" alt=""
+                /></a>
+              </li>
+              <div class="search-form">
+                <form action="">
+                  <input
+                    type="text"
+                    type="search"
+                    name=""
+                    placeholder="Axtar..."
+                  />
+                </form>
+              </div>
+            </ul>
+  
+            <a href="#" class="sorgu-btn">
+              <span>Sorğu</span>
+              <img src="./assets/img/redirect.svg" alt="" />
+            </a>
+            <form class="mobile-search" role="search">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Axtar..."
+                aria-label="Search"
+              />
+            </form>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+      <!-- End Nav -->
 
     <!-- Main -->
     <main>
