--- a/documents.html
+++ b/documents.html
@@ -222,7 +222,7 @@
                     <div class="row">
                         <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
                             <div class="document-item">
-                                <div class="document-item-icon">
+                                <div class="document-item-icon" style="background-color: #FFE6E2;">
                                     <img src="./assets/img/pdficon.svg" alt="">
                                 </div>
                                 <div class="document-item-body">
@@ -237,7 +237,7 @@
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6">
                             <div class="document-item">
-                                <div class="document-item-icon">
+                                <div class="document-item-icon" style="background-color: #D7E7FF;">
                                     <img src="./assets/img/wordicon.svg" alt="">
                                 </div>
                                 <div class="document-item-body">
